using movie clip (and change directory structure)

--- a/app/index.html
+++ b/app/index.html
@@ -26,13 +26,19 @@
 </div>
 
 <script src="https://code.createjs.com/createjs-2014.12.12.min.js"></script>
+<script src="https://code.createjs.com/movieclip-0.8.0.min.js"></script>
 
-<!-- build:js(src) scripts/vendor.js -->
+<!-- build:js(app,lib) scripts/vendor.js -->
 <!-- bower:js -->
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- build:js({.tmp,src}) scripts/app.js -->
+<!-- build:js({.tmp,app}) scripts/assets.js -->
+<!-- assets:js -->
+<!-- endinject -->
+<!-- endbuild -->
+
+<!-- build:js({.tmp,app}) scripts/app.js -->
 <!-- inject:js -->
 <!-- endinject -->
 <!-- endbuild -->
